[gd_scene load_steps=6 format=3]

[ext_resource type="PackedScene" uid="uid://do6ub1hash3e3" path="res://RouteFinder/Map/Map.tscn" id="1_euobf"]
[ext_resource type="Script" path="res://RouteFinder/Map/MapWindow.gd" id="1_lrpwp"]
[ext_resource type="PackedScene" uid="uid://ho2v16b6byu8" path="res://RouteFinder/Map/HUD/RoomInfoDisplay.tscn" id="2_hd812"]
[ext_resource type="Script" path="res://RouteFinder/Map/Camera/MapCamera.gd" id="3_0d6gl"]

[sub_resource type="Environment" id="Environment_yxytf"]

[node name="MapWindow" type="Control"]
custom_minimum_size = Vector2(1700, 800)
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 0.941
offset_bottom = 0.149963
script = ExtResource("1_lrpwp")
metadata/_edit_vertical_guides_ = [-269.0]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Panel" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
text = "Start Point:"

[node name="Option_Start" type="OptionButton" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text_overrun_behavior = 3
fit_to_longest_item = false

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
text = "End Point:"

[node name="Option_End" type="OptionButton" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text_overrun_behavior = 3
fit_to_longest_item = false

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
text = "Search Tag:"

[node name="LineEdit_Tag" type="LineEdit" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Default"

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer"]
layout_mode = 2
text = "Room Count"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_RoomCount" type="Label" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer"]
layout_mode = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer"]
layout_mode = 2
text = "Route Time"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_RouteTime" type="Label" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer"]
layout_mode = 2
text = "0s"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button_Copy" type="Button" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 6
text = "Copy Rooms"

[node name="Button_Clear" type="Button" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 6
focus_mode = 0
text = "Clear"

[node name="Tree_Rooms" type="Tree" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
hide_root = true

[node name="SubViewportContainer" type="SubViewportContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(1000, 800)
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="HBoxContainer/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1000, 800)
render_target_update_mode = 4

[node name="Map" parent="HBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("1_euobf")]

[node name="Camera3D" type="Camera3D" parent="HBoxContainer/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -300, 1300, 550)
current = true
script = ExtResource("3_0d6gl")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="HBoxContainer/SubViewportContainer/SubViewport"]
transform = Transform3D(0.97406, 0.211619, 0.0801463, -0.143687, 0.304798, 0.941516, 0.174815, -0.928609, 0.327298, 0, 280.259, 0)
directional_shadow_mode = 0

[node name="WorldEnvironment" type="WorldEnvironment" parent="HBoxContainer/SubViewportContainer/SubViewport"]
environment = SubResource("Environment_yxytf")

[node name="Panel2" type="Panel" parent="HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(350, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Panel2/MarginContainer"]
layout_mode = 2

[node name="Label_Data" type="Label" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Room Data"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RoomInfoDisplay" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer" instance=ExtResource("2_hd812")]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 13

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label_Room" type="Label" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "*"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Time Editor"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button_Save" type="Button" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save"

[node name="Button_Add" type="Button" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(31, 0)
layout_mode = 2
text = "+"

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button_ShowControls" type="Button" parent="."]
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.206
anchor_right = 0.224
anchor_bottom = 0.039
offset_left = -0.200012
offset_right = -0.800018
offset_bottom = -0.200001
text = "?"
flat = true

[connection signal="item_selected" from="HBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/Option_Start" to="." method="pointOptionSelected"]
[connection signal="item_selected" from="HBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer2/Option_End" to="." method="pointOptionSelected"]
[connection signal="text_submitted" from="HBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer3/LineEdit_Tag" to="." method="_on_line_edit_tag_text_submitted"]
[connection signal="pressed" from="HBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer2/Button_Copy" to="." method="_on_button_copy_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer2/Button_Clear" to="." method="_on_button_clear_pressed"]
[connection signal="connection_clicked" from="HBoxContainer/Panel2/MarginContainer/VBoxContainer/RoomInfoDisplay" to="." method="_on_room_info_display_connection_clicked"]
[connection signal="pressed" from="HBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer/Button_Save" to="." method="_on_button_save_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer/Button_Add" to="." method="_on_button_add_pressed"]
[connection signal="pressed" from="Button_ShowControls" to="." method="_on_button_show_controls_pressed"]
